// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Components defalut snapshot 1`] = `
<Fragment>
  <div
    className="navbarSelf"
  >
    <div
      className="title"
    >
      <h1>
        Pokedex
      </h1>
    </div>
    <div
      className="pokeTypes"
    >
      <h3>
        Types
      </h3>
      <ul
        className="list"
      >
        <li
          key="0"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Grass"
                onChange={[Function]}
                type="checkbox"
                value="Grass"
              />
              <label>
                Grass
              </label>
            </div>
          </div>
        </li>
        <li
          key="1"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Poison"
                onChange={[Function]}
                type="checkbox"
                value="Poison"
              />
              <label>
                Poison
              </label>
            </div>
          </div>
        </li>
        <li
          key="2"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Fire"
                onChange={[Function]}
                type="checkbox"
                value="Fire"
              />
              <label>
                Fire
              </label>
            </div>
          </div>
        </li>
        <li
          key="3"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Flying"
                onChange={[Function]}
                type="checkbox"
                value="Flying"
              />
              <label>
                Flying
              </label>
            </div>
          </div>
        </li>
        <li
          key="4"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Water"
                onChange={[Function]}
                type="checkbox"
                value="Water"
              />
              <label>
                Water
              </label>
            </div>
          </div>
        </li>
        <li
          key="5"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Bug"
                onChange={[Function]}
                type="checkbox"
                value="Bug"
              />
              <label>
                Bug
              </label>
            </div>
          </div>
        </li>
        <li
          key="6"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Normal"
                onChange={[Function]}
                type="checkbox"
                value="Normal"
              />
              <label>
                Normal
              </label>
            </div>
          </div>
        </li>
        <li
          key="7"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Electric"
                onChange={[Function]}
                type="checkbox"
                value="Electric"
              />
              <label>
                Electric
              </label>
            </div>
          </div>
        </li>
        <li
          key="8"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Ground"
                onChange={[Function]}
                type="checkbox"
                value="Ground"
              />
              <label>
                Ground
              </label>
            </div>
          </div>
        </li>
        <li
          key="9"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Psychic"
                onChange={[Function]}
                type="checkbox"
                value="Psychic"
              />
              <label>
                Psychic
              </label>
            </div>
          </div>
        </li>
        <li
          key="10"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Rock"
                onChange={[Function]}
                type="checkbox"
                value="Rock"
              />
              <label>
                Rock
              </label>
            </div>
          </div>
        </li>
        <li
          key="11"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Ice"
                onChange={[Function]}
                type="checkbox"
                value="Ice"
              />
              <label>
                Ice
              </label>
            </div>
          </div>
        </li>
        <li
          key="12"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Ghost"
                onChange={[Function]}
                type="checkbox"
                value="Ghost"
              />
              <label>
                Ghost
              </label>
            </div>
          </div>
        </li>
        <li
          key="13"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Dragon"
                onChange={[Function]}
                type="checkbox"
                value="Dragon"
              />
              <label>
                Dragon
              </label>
            </div>
          </div>
        </li>
        <li
          key="14"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Fighting"
                onChange={[Function]}
                type="checkbox"
                value="Fighting"
              />
              <label>
                Fighting
              </label>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="pokeWeekness"
    >
      <h3>
        Weaknesses
      </h3>
      <ul
        className="list"
      >
        <li
          key="0"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Grass"
                onChange={[Function]}
                type="checkbox"
                value="Grass"
              />
              <label>
                Grass
              </label>
            </div>
          </div>
        </li>
        <li
          key="1"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Poison"
                onChange={[Function]}
                type="checkbox"
                value="Poison"
              />
              <label>
                Poison
              </label>
            </div>
          </div>
        </li>
        <li
          key="2"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Fire"
                onChange={[Function]}
                type="checkbox"
                value="Fire"
              />
              <label>
                Fire
              </label>
            </div>
          </div>
        </li>
        <li
          key="3"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Flying"
                onChange={[Function]}
                type="checkbox"
                value="Flying"
              />
              <label>
                Flying
              </label>
            </div>
          </div>
        </li>
        <li
          key="4"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Water"
                onChange={[Function]}
                type="checkbox"
                value="Water"
              />
              <label>
                Water
              </label>
            </div>
          </div>
        </li>
        <li
          key="5"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Bug"
                onChange={[Function]}
                type="checkbox"
                value="Bug"
              />
              <label>
                Bug
              </label>
            </div>
          </div>
        </li>
        <li
          key="6"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Fairy"
                onChange={[Function]}
                type="checkbox"
                value="Fairy"
              />
              <label>
                Fairy
              </label>
            </div>
          </div>
        </li>
        <li
          key="7"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Electric"
                onChange={[Function]}
                type="checkbox"
                value="Electric"
              />
              <label>
                Electric
              </label>
            </div>
          </div>
        </li>
        <li
          key="8"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Ground"
                onChange={[Function]}
                type="checkbox"
                value="Ground"
              />
              <label>
                Ground
              </label>
            </div>
          </div>
        </li>
        <li
          key="9"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Psychic"
                onChange={[Function]}
                type="checkbox"
                value="Psychic"
              />
              <label>
                Psychic
              </label>
            </div>
          </div>
        </li>
        <li
          key="10"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Rock"
                onChange={[Function]}
                type="checkbox"
                value="Rock"
              />
              <label>
                Rock
              </label>
            </div>
          </div>
        </li>
        <li
          key="11"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Ice"
                onChange={[Function]}
                type="checkbox"
                value="Ice"
              />
              <label>
                Ice
              </label>
            </div>
          </div>
        </li>
        <li
          key="12"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Ghost"
                onChange={[Function]}
                type="checkbox"
                value="Ghost"
              />
              <label>
                Ghost
              </label>
            </div>
          </div>
        </li>
        <li
          key="13"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Dragon"
                onChange={[Function]}
                type="checkbox"
                value="Dragon"
              />
              <label>
                Dragon
              </label>
            </div>
          </div>
        </li>
        <li
          key="14"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Fighting"
                onChange={[Function]}
                type="checkbox"
                value="Fighting"
              />
              <label>
                Fighting
              </label>
            </div>
          </div>
        </li>
        <li
          key="15"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Steel"
                onChange={[Function]}
                type="checkbox"
                value="Steel"
              />
              <label>
                Steel
              </label>
            </div>
          </div>
        </li>
        <li
          key="16"
        >
          <div>
            <div>
              <input
                checked={false}
                name="Dark"
                onChange={[Function]}
                type="checkbox"
                value="Dark"
              />
              <label>
                Dark
              </label>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="searchBar"
    >
      <input
        onChange={[Function]}
        placeholder="Search.."
        type="text"
        value=""
      />
    </div>
  </div>
  <List
    currText=""
    pokeType={Array []}
    pokeWeakness={Array []}
  />
</Fragment>
`;

exports[`Navbar Components input first click snapshot 1`] = `
<input
  checked={false}
  name="Grass"
  onChange={[Function]}
  type="checkbox"
  value="Grass"
/>
`;

exports[`Navbar Components input last click snapshot 1`] = `
<input
  checked={false}
  name="Steel"
  onChange={[Function]}
  type="checkbox"
  value="Steel"
/>
`;
